CRUD operation with authentication , validation

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 port = 3000
 NODE_ENV = "development",
-NS_DATABASE_URL = "mongodb://localhost:27017/weblight"
+JWT_AUTH_SECRET_KEY = 'secreteKey1234'
+NS_DATABASE_URL = "mongodb+srv://sarthak:sarthak@cluster0.9yaeqh4.mongodb.net/weblight"
