--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon start.ts"
   },
+  "prisma": {
+    "seed": "ts-node ./Prisma/Seeders/index.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sarthak-Bhadiyadra/weblight-.git"
@@ -23,12 +26,16 @@
     "ajv-formats": "^2.1.1",
     "ajv-keywords": "^5.1.0",
     "async": "^3.2.4",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.1",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
